# cursor-rust-tools

./: .gitignore  Cargo.toml  README.md  rust_analyzer_lsp_temp.rs
.cursor/: mcp.json
.github/workflows/: rust.yml
examples/: dev-client.rs
src/: cargo_remote.rs  context.rs  main.rs  project.rs
src/docs/: extract_md.rs  generate.rs  index.rs  mod.rs  utils.rs  walk.rs
src/lsp/: change_notifier.rs  client_state.rs  mod.rs  rust_analyzer_lsp.rs  utils.rs
src/mcp/: cargo_check.rs  cargo_test.rs  crate_docs.rs  mod.rs  symbol_docs.rs  symbol_impl.rs  symbol_references.rs  symbol_resolve.rs  utils.rs
src/ui/: app.rs  log.rs  mod.rs  theme.rs
