[package]
name = "cursor-rust-tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cursor-rust-tools"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
async-lsp = "0.2.2"
async-process = "2.3.0"
dirs = "5.0.1"
flume = "0.11.1"
futures = "0.3.31"
lsp-types = "0.95.1"
mcp-core = { git = "https://github.com/terhechte/mcp-core", branch = "allow-tool-context", features = ["sse"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
schemars = "0.8.22"
fuzzt = "0.3.1"
regex = "1.11.1"
glob = "0.3.2"
toml = "0.8.20"
sha2 = "0.10.8"
ignore = "0.4.23"
html2md = "0.2.15"
egui = "0.31"
eframe = "0.31"
lazy_static = "1.5.0"
egui-aesthetix = { git = "https://github.com/thebashpotato/egui-aesthetix", features = ["all_themes"]}
rfd = "0.15.3"
open = "5"
shellexpand = "3.1.0"
chrono = "0.4.40"
notify = "8.0.0"
notify-debouncer-mini = "0.6.0"
dunce = "1.0.5"
